[package]
name = "focusfeedbackgui"
version = "2025.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "focusfeedbackgui"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
ndarray = { version = "0.16.1", features = ["approx", "rayon"] }
numpy = "0.25.0"
statrs = "0.18.0"
