[package]
name = "focusfeedbackgui"
version = "2026.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "focusfeedbackgui"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
ndarray = { version = "0.17", features = ["approx", "rayon"] }
numpy = "0.27"
statrs = "0.18"
