[project]
name = "focusfeedbackgui"
version = "2024.2.0"
description = "Live track particles."
readme = "README.md"
authors = [{ name = "Wim Pomp @ Lenstra lab NKI", email = "w.pomp@nki.nl" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ["microscopy", "focus", "feedback"]
dependencies = ["numpy>=1.16.5", "scipy", "matplotlib", "parfor>=2021.7.1", "scikit-image>=0.18.0", "pandas",
    "pyside6", "pyyaml", "pywin32; platform_system==\"Windows\"", "ndbioimage>=2023.12.2"]

[project.scripts]
focusfeedbackgui = "focusfeedbackgui.__main__:main"

[tool.maturin]
include = [
    { path = "conf.yml", format = "sdist" },
    { path = "stylesheet.qss", format = "sdist" }
]
module-name = "focusfeedbackgui.functions_rs"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"