[tool.poetry]
name = "focusfeedbackgui"
version = "2024.7.0"
description = "Live track particles."
authors = ["Wim Pomp, Lenstra lab NKI <w.pomp@nki.nl>"]
license = "GPLv3"
readme = "README.md"
keywords = ["microscopy", "focus", "feedback"]
include = ["conf.yml", "stylesheet.qss"]
repository = "https://github.com/Lenstralab/FocusFeedbackGUI"

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.16.5"
scipy = "*"
matplotlib = "*"
parfor = ">=2025.1.0"
scikit-image = ">=0.18.0"
pandas = ">=2.0.0"
pyside2 = [
    { version = "*", python = "<3.9" },  # for python 3.9 and 3.10 pyside2 or pyside6 can be selected
]
pyside6 = [
    { version = "*", python = ">=3.11" },
]
pyyaml = "*"
pywin32 = { version = "*", markers = "sys_platform == 'win32'" }
ndbioimage = ">=2024.4.4"
focusfeedbackgui_rs = { path = "focusfeedbackgui_rs" }

[tool.poetry.extras]
dev = ["pytest", "pytest-order"]
#pyside2 = ["pyside2"]
#pyside6 = ["pyside6"]

[tool.poetry.scripts]
focusfeedbackgui = "focusfeedbackgui.__main__:main"

[tool.isort]
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"