[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "focusfeedbackgui"
dynamic = ["version"]
description = "Live track particles."
authors = [
    { name = "Wim Pomp", email = "w.pomp@nki.nl" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["microscopy", "focus", "feedback"]
include = ["conf.yml", "stylesheet.qss"]
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "matplotlib",
    "ndbioimage>=2025.8.0",
    "numpy<2.0.0",
    "pandas>=2.0.0",
    "parfor>=2025.1.0",
    "pyside2; python_version<'3.9'",
    "pyside6; python_version>'3.10'",
    "pyyaml",
    "pywin32; sys_platform=='win32'",
    "scikit-image>=0.18.0",
    "scipy>=1.15.0",
]

[project.urls]
repository = "https://github.com/Lenstralab/FocusFeedbackGUI"

[project.optional-dependencies]
dev = ["pytest", "pytest-order"]
#pyside2 = ["pyside2"]
#pyside6 = ["pyside6"]

[project.scripts]
focusfeedbackgui = "focusfeedbackgui.__main__:main"

[tool.maturin]
python-source = "py"
module-name = "focusfeedbackgui.functions_rs"

[tool.isort]
line_length = 119

[tool.ruff]
line-length = 119
indent-width = 4
