[package]
name = "focusfeedbackgui_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "focusfeedbackgui_rs"
path = "focusfeedbackgui_rs/functions.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.19.1", features = ["extension-module", "abi3-py38", "generate-import-lib"] }
ndarray = { version = "0.15.6", features = ["approx", "rayon"] }
numpy = "0.19.0"
statrs = "0.16.0"

[package.metadata.maturin]
name = "focusfeedbackgui_rs.functions"