[project]
name = "focusfeedbackgui_rs"
version = "2024.4.0"
description = "Live track particles."
readme = "README.md"
authors = [{ name = "Wim Pomp @ Lenstra lab NKI", email = "w.pomp@nki.nl" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.maturin]
module-name = "focusfeedbackgui_rs.functions"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"